# meeting-assistant

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config.json.example
flutter_app/: pubspec.yaml
flutter_app/ios/Runner/: Info.plist
flutter_app/ios/Runner.xcodeproj/: project.pbxproj
flutter_app/lib/: main.dart
flutter_app/lib/core/theme/: app_theme.dart
flutter_app/lib/features/llm/data/repositories/: llm_service.dart
flutter_app/lib/features/llm/presentation/providers/: llm_provider.dart
flutter_app/lib/features/settings/data/repositories/: settings_repository_impl.dart
flutter_app/lib/features/settings/domain/entities/: app_config.dart
flutter_app/lib/features/settings/presentation/providers/: settings_provider.dart
flutter_app/lib/features/transcription/data/datasources/: whisper_service.dart  whisper_transcription_service.dart
flutter_app/lib/features/transcription/data/services/: pdf_export_service.dart
flutter_app/lib/features/transcription/domain/entities/: meeting.dart
flutter_app/lib/features/transcription/domain/repositories/: meeting_repository.dart
flutter_app/lib/features/transcription/presentation/providers/: meetings_provider.dart  model_download_provider.dart  providers.dart  transcription_provider.dart
flutter_app/lib/features/transcription/presentation/screens/: home_screen.dart  model_download_screen.dart  settings_screen.dart
flutter_app/lib/features/transcription/presentation/widgets/: record_button.dart  transcription_view.dart
flutter_app/lib/l10n/: app_de.arb  app_en.arb  app_es.arb  app_fr.arb  app_it.arb  app_ja.arb  app_localizations.dart  app_localizations_de.dart  app_localizations_en.dart  app_localizations_es.dart  app_localizations_fr.dart  app_localizations_it.dart  app_localizations_ja.dart  app_localizations_pt.dart  app_localizations_zh.dart  app_pt.arb  app_zh.arb
flutter_app/lib/models/: config.dart
flutter_app/macos/Flutter/: GeneratedPluginRegistrant.swift
flutter_app/macos/Runner/: MainFlutterWindow.swift
flutter_app/macos/Runner.xcodeproj/: project.pbxproj
flutter_app/macos/Runner/Configs/: AppInfo.xcconfig
include/: AudioCapture.h  Config.h  HttpClient.h  Integrations.h  LLMClients.h  MacTrayApp.h  TerminalUI.h  Transcriber.h
src/: AudioCapture.cpp  Config.cpp  HttpClient.cpp  Integrations.cpp  LLMClients.cpp  MacTrayApp.mm  TerminalUI.cpp  Transcriber.cpp  main.cpp
